# engineering

./: function.cpp  main.cpp
engineer_v2.4/: CMakeLists.txt  function.cpp  main.cpp
engineer_v2.4/include/: configure.h  function.hpp  serialport.h
engineer_v2.5/: function.cpp
engineer_v2.6/: main.cpp
engineer_v2.7/: function.cpp  main.cpp
engineer_v2.7/include/: function.hpp
engineer_v2.8/: function.cpp  main.cpp  mv_video_capture.cpp
engineer_v2.8/include/: function.hpp
include/: function.hpp
integration_v1.0/: CMakeLists.txt  function.cpp  main.cpp
integration_v1.0/include/: function.hpp
integration_v1.1/: function.cpp  main.cpp
integration_v1.1/include/: mv_video_capture.hpp  toInference.hpp
integration_v1.2/: function.cpp  main.cpp
integration_v1.2/include/: function.hpp
integration_v1.3/: function.cpp  main.cpp  serialport.cpp  toInference.cpp
integration_v1.3/include/: serialport.h
model_best/: eval_results.txt
ncnn_v1.0/: CMakeLists.txt  main.cpp  nanodet.h
ncnn_v2.0/: CMakeLists.txt  main.cpp  toInference.cpp
ncnn_v2.0/include/: toInference.hpp
